--- a/project/templates/main.html
+++ b/project/templates/main.html
@@ -7,14 +7,19 @@
     <link rel="stylesheet" href="{% static "css/icon.css" %}">
     <script src="{% static "js/libraries/angular.min.js" %}"></script>
     <script src="{% static "js/libraries/ng-file-upload-all.min.js" %}"></script>
+    <script src="{% static "js/libraries/html2canvas.js" %}"></script>
     <script src="{% static "js/project/MainController.js" %}"></script>
 </head>
 <body>
     {% verbatim %}
     <div class="content">
         <div ng-app="MemeList" ng-controller="MainController">
-            <span ngf-select="uploadFile()" ng-model="filesForUpload" class="upload-button">Upload File</span><br>
-            <table cellpadding="0" cellspacing="0" class="data-list-table">
+            <div ng-hide="loading" class="controls">
+                <span ngf-select="uploadFile()" ng-model="filesForUpload" class="upload-button">Upload File</span>
+                <span ng-click="exportToImage()" class="upload-button">Export</span>
+            </div>
+            <img src="/static/images/header.png" class="header-image">
+            <table ng-if="dataList.length" cellpadding="0" cellspacing="0" class="data-list-table">
                 <tr>
                     <th class="domain-cell"></th>
                     <th class="vertical-cell">Vertical</th>
@@ -23,8 +28,10 @@
                     <th>Countries</th>
                 </tr>
                 <tr ng-repeat="dataItem in dataList">
-                    <td class="domain-cell">
-                        <img ng-src="https://logo.clearbit.com/{{ dataItem.domain }}?size=50"><br>
+                    <td ngf-select="changeDomainImage($files, dataItem)" class="domain-cell">
+                        <img ng-if="!dataItem.customDomainImage" ng-src="https://logo.clearbit.com/{{ dataItem.domain }}?size=50">
+                        <img ng-if="dataItem.customDomainImage" ng-src="{{ dataItem.customDomainImage }}">
+                        <br>
                         {{ dataItem.domain }}
                     </td>
                     <td class="vertical-cell">
