--- a/project/templates/export.html
+++ b/project/templates/export.html
@@ -1,14 +1,14 @@
 <html>
 <head>
     <title></title>
-    <link rel="stylesheet" href="http://127.0.0.1:8008/static/css/main.css">
-    <link rel="stylesheet" href="http://127.0.0.1:8008/static/css/country.css">
-    <link rel="stylesheet" href="http://127.0.0.1:8008/static/css/icon.css">
+    <link rel="stylesheet" href="http://127.0.0.1:8000/static/css/main.css">
+    <link rel="stylesheet" href="http://127.0.0.1:8000/static/css/country.css">
+    <link rel="stylesheet" href="http://127.0.0.1:8000/static/css/icon.css">
 </head>
 <body>
     <div class="content">
         <div>
-            <img src="http://127.0.0.1:8008/static/images/header.png" class="header-image">
+            <img src="http://127.0.0.1:8000/static/images/header.png" class="header-image">
             <table cellpadding="0" cellspacing="0" class="data-list-table">
                 <tr>
                     <th class="domain-cell"></th>
@@ -20,7 +20,11 @@
                 {% for data_item in data %}
                 <tr>
                     <td class="domain-cell">
-                        <img src="https://logo.clearbit.com/{{ data_item.domain }}?size=50">
+                        {% if data_item.custom_domain_image %}
+                            <img src="{{ data_item.custom_domain_image }}">
+                        {% else %}
+                            <img src="https://logo.clearbit.com/{{ data_item.domain }}?size=50">
+                        {% endif %}
                         <br>
                         {{ data_item.domain }}
                     </td>
