--- a/static/css/country.css
+++ b/static/css/country.css
@@ -21,6 +21,7 @@
   text-transform: none;
   line-height: 1;
   font-size: 28px;
+  vertical-align: middle;
   margin: 3px 0 5px 0;
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
