fix country icons in export

--- a/project/templates/export.html
+++ b/project/templates/export.html
@@ -1,14 +1,17 @@
 <html>
 <head>
     <title></title>
-    <link rel="stylesheet" href="http://127.0.0.1:8008/static/css/main.css">
-    <link rel="stylesheet" href="http://127.0.0.1:8008/static/css/country.css">
-    <link rel="stylesheet" href="http://127.0.0.1:8008/static/css/icon.css">
+    <link rel="stylesheet" href="http://127.0.0.1:8000/static/css/main.css">
+    <link rel="stylesheet" href="http://127.0.0.1:8000/static/css/country.css">
+    <link rel="stylesheet" href="http://127.0.0.1:8000/static/css/icon.css">
 </head>
 <body>
+    <div style="overflow: hidden; height: 0;">
+    <span class="country-icon-US"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span><span class="path6"></span><span class="path7"></span><span class="path8"></span><span class="path9"></span><span class="path10"></span><span class="path11"></span><span class="path12"></span><span class="path13"></span><span class="path14"></span></span>
+    </div>
     <div class="content">
         <div>
-            <img src="http://127.0.0.1:8008/static/images/header.png" class="header-image">
+            <img src="http://127.0.0.1:8000/static/images/header.png" class="header-image">
             <table cellpadding="0" cellspacing="0" class="data-list-table">
                 <tr>
                     <th class="domain-cell"></th>
