--- a/project/templates/export.html
+++ b/project/templates/export.html
@@ -1,14 +1,12 @@
 <html>
 <head>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <title></title>
     <link rel="stylesheet" href="http://127.0.0.1:8008/static/css/main.css">
     <link rel="stylesheet" href="http://127.0.0.1:8008/static/css/country.css">
     <link rel="stylesheet" href="http://127.0.0.1:8008/static/css/icon.css">
 </head>
 <body>
-    <div style="overflow: hidden; height: 0;">
-    <span class="country-icon-US"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span><span class="path6"></span><span class="path7"></span><span class="path8"></span><span class="path9"></span><span class="path10"></span><span class="path11"></span><span class="path12"></span><span class="path13"></span><span class="path14"></span></span>
-    </div>
     <div class="content">
         <div>
             <img src="http://127.0.0.1:8008/static/images/header.png" class="header-image">
@@ -48,9 +46,15 @@
                         {{ data_item.sizes|join:" / " }}
                     </td>
                     <td class="country-cell">
+                        {% if forloop.counter0|divisibleby:2 %}
                         {% for geo in data_item.geos %}
-                        <span class="contry-icon-block"><span class="country-icon-{{ geo }}"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span><span class="path6"></span><span class="path7"></span><span class="path8"></span><span class="path9"></span><span class="path10"></span><span class="path11"></span><span class="path12"></span><span class="path13"></span><span class="path14"></span></span></span>
+                        <img src="http://127.0.0.1:8008/static/images/flags/{{ geo }}-light.png"></span>
                         {% endfor %}
+                        {% else %}
+                        {% for geo in data_item.geos %}
+                        <img src="http://127.0.0.1:8008/static/images/flags/{{ geo }}-dark.png"></span>
+                        {% endfor %}
+                        {% endif %}
                     </td>
                 </tr>
                 {% endfor %}
