--- a/static/css/icon.css
+++ b/static/css/icon.css
@@ -17,7 +17,7 @@
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
-  line-height: 1px;
+  /*line-height: 1px;*/
   font-size: 28px;
   font-weight: bold;
   vertical-align: middle;
